lots of changes particularly to formatting, visual reflexes converted to TS and DO test features added. Added formatting to header and profile

--- a/frontend/src/app/components/pages/direct-ophthalmoscopy-test/direct-ophthalmoscopy-test.component.html
+++ b/frontend/src/app/components/pages/direct-ophthalmoscopy-test/direct-ophthalmoscopy-test.component.html
@@ -2,10 +2,23 @@
   <!--navbar partial-->
   <app-navbar></app-navbar>
   <!--Right Container-->
-  <div class="right-container">
+  <div class="card-container right-container">
     <!--Title-->
-    <div class="title-container">
+    <div class="card-container title-container">
       <h1 class="title">Direct Ophthalmoscopy</h1>
+    </div>
+    <!--Instructions-->
+    <div class="card-container case-study-instructions text-center">
+      <h2>Instructions:</h2>
+      <p>Move the mouse in order to see the back of the retina. You can adjust the resolution and peep hole size using your keyboard.</p>
+    </div>
+
+    <div class="card-container">
+        <!--Buttons for adjusting resolution and size-->
+        <button class="button" (click)="adjustResolution(-1)">Lower Resolution (Press Down Key)</button>
+        <button class="button" (click)="adjustResolution(1)">Higher Resolution (Press Up Key)</button>
+        <button class="button" (click)="adjustSize(-1)">Decrease Size (Press Left Key)</button>
+        <button class="button"(click)="adjustSize(1)">Increase Size (Press Right Key)</button>
     </div>
     <!--Direct Ophthalmoscopy Test-->
     <div class="ophthalmoscopy-container">
@@ -15,7 +28,7 @@
       <!--Black Background-->
       <div id="black-background"></div>
       <!--Background image of eye -->
-      <div id="background-image"></div>
+      <div id="background-image" #backgroundImage></div>
       <!--Mask layer-->
       <div id="maskLayer">
         <svg id="maskSvg" #maskSvg width="100%" height="100%">
@@ -28,6 +41,15 @@
           <rect width="100%" height="100%" fill="black" mask="url(#mask)"/>
         </svg>              
       </div>
+    </div>
+  <!--Switch to other eye-->
+    <div class="card-container">
+      <default-button
+        [type]="'button'"
+        [text]="'Switch to ' + otherEye + ' Eye'"
+        [bgColor]="'#9c88ff'"
+        (onClick)="handleClick()"
+      ></default-button>
     </div>
   </div>
 </div>
