--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,5 +1,6 @@
-<!--now added the loading -->
 <app-loading></app-loading>
 <app-header></app-header>
-<router-outlet></router-outlet>
+<main>
+   <router-outlet></router-outlet>
+</main>
 <app-footer></app-footer>
