--- a/frontend/src/app/components/pages/case-study-detail/case-study-detail.component.css
+++ b/frontend/src/app/components/pages/case-study-detail/case-study-detail.component.css
@@ -1,7 +1,8 @@
 /* Parent Container allows for a row layout */
 .parent-container {
   display: flex;
-  
+  padding: 2em;
+  background-color: white;
 }
 
 /* Navbar Styles */
@@ -17,33 +18,33 @@
   display: flex;
   flex-direction: column;
   width: 75%; /* Adjust width according to your needs */
-  padding: 2em;
-  background-color: white;
 }
 
 .case-study-details {
   max-width: 800px;
-  background-color: white;
-  padding: 1em 2em;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  color: #9c88ff;
 }
 
 .case-study-image {
   width: 100%;
   border-radius: 10px;
+  height: auto;
 }
 
-.header {
-  margin-top: 1em;
-  margin-bottom: 2em;
-  text-align: center;
+.card {
+  background-color: rgb(238, 234, 234);
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.4);
+  border-radius: 10px;
+  margin: 20px;
+  padding: 20px;
+  color: #9c88ff;
 }
 
 .name {
   font-size: 1.5em;
 }
-
 
 @media screen and (max-width: 600px) {
   .parent-container {
