--- a/frontend/src/app/components/pages/case-study-detail/case-study-detail.component.html
+++ b/frontend/src/app/components/pages/case-study-detail/case-study-detail.component.html
@@ -5,28 +5,28 @@
   <!-- Right Container -->
   <div class="right-container text-center">
     <!-- case-study-detail.component.html -->
-    <div class="case-study-details">
-      <img class="case-study-image" [src]="caseStudy.imageUrl" [alt]="caseStudy.name" />
-      <div class="header">
-        <span class="name"><strong>Name: </strong> {{caseStudy.name}}</span>
+    <div class="card case-study-details">
+      <img class="card-img-top case-study-image" [src]="caseStudy.imageUrl" [alt]="caseStudy.name" />
+      <div class="card-body">
+        <h5 class="card-title name">{{caseStudy.name}}</h5>
+        <p class="card-text"><strong>Age:</strong> {{ caseStudy.age }}</p>
+        <p class="card-text"><strong>Gender:</strong> {{ caseStudy.gender }}</p>
+        <p class="card-text"><strong>Medical History:</strong> {{ caseStudy.medicalHistory }}</p>
+        <p class="card-text"><strong>Drug Information:</strong> {{ caseStudy.drugInfo }}</p>
+        <p class="card-text"><strong>Social Information:</strong> {{ caseStudy.socialInfo }}</p>
+        <p class="card-text"><strong>Family History:</strong> {{ caseStudy.familyHistory }}</p>
       </div>
-      <p><strong>Age:</strong> {{ caseStudy.age }}</p>
-      <p><strong>Gender:</strong> {{ caseStudy.gender }}</p>
-      <p><strong>Medical History:</strong> {{ caseStudy.medicalHistory }}</p>
-      <p><strong>Drug Information:</strong> {{ caseStudy.drugInfo }}</p>
-      <p><strong>Social Information:</strong> {{ caseStudy.socialInfo }}</p>
-      <p><strong>Family History:</strong> {{ caseStudy.familyHistory }}</p>
     </div>
-    
   </div>
 
   <!--instructions for this stage-->
+  <div class="card">
   <div class="case-study-instructions text-center">
     <h2>Instructions:</h2>
-    <p>Read the <strong>background</strong> of the patient for this case study. Use the <strong>icon in the bottom right of the page</strong> to ask them appropriate questions in order to gather as much detail as possible. Please remember that some information the patient says may not be useful. 
-    </p>
+    <p>Read the <strong>background</strong> of the patient for this case study. Use the <strong>icon in the bottom right of the page</strong> to ask them appropriate questions in order to gather as much detail as possible. Please remember that some information the patient says may not be useful.</p>
     <p>Click the button below when you are finished speaking to the patient. Later you will conduct eye test examinations, investigations and provide diagnosis.</p>
     <default-button 
+    *ngIf="showButton" 
       [type]="'button'" 
       [text]="'Confirm Finished'" 
       [bgColor]="'#9c88ff'"
@@ -34,6 +34,4 @@
     ></default-button>
   </div>
 </div>
-
-
-
+</div>
