--- a/frontend/src/app/components/pages/direct-ophthalmoscopy-test/direct-ophthalmoscopy-test.component.css
+++ b/frontend/src/app/components/pages/direct-ophthalmoscopy-test/direct-ophthalmoscopy-test.component.css
@@ -17,7 +17,6 @@
 
 /* Title Container */
 .title-container {
-  background-color: white;
   text-align: center; /* Center the title */
   padding: 20px 0; /* Add some vertical padding */
 }
@@ -60,4 +59,34 @@
 /* Provide mask black background */
 #maskLayer {
   z-index: 3; /* This div will be above the image and black background */
+}
+.text-center {
+  text-align: center;
+}
+
+.card-container {
+  background-color: rgb(238, 234, 234);
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.4);
+  border-radius: 10px;
+  margin: 20px;
+  padding: 20px;
+  color: #9c88ff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 70%;
+}
+
+.button {
+  background-color: #4CAF50; /* Green */
+  color: white;
+  text-align: center;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  margin-top: 5px;
+}
+
+.button:hover {
+  background-color: #45a049;
 }
