--- a/frontend/src/app/components/pages/pupil-reflexes-test/pupil-reflexes-test.component.html
+++ b/frontend/src/app/components/pages/pupil-reflexes-test/pupil-reflexes-test.component.html
@@ -1,9 +1,23 @@
-<div class="parent-container">
-  <!--navbar partial-->
-  <app-navbar></app-navbar>
-  <!--pupil reflexes container-->
-  <div class="eye-movements-container">
-    <h1 class="title">Pupil Reflexes Test</h1>
-    <canvas id="myCanvas" width="600" height="600"></canvas>
+<div class="full-container">
+  <div class="parent-container">
+    <!--navbar partial-->
+    <div class="d-flex justify-content-left text-center">
+      <app-navbar></app-navbar>
+    </div>
+    <!--Pupil reflexes test-->
+    <div class="card-container eye-movements-container">
+      <h1 class="card-container title">Pupil Reflexes Test</h1>
+      <!--Instructions-->
+      <div class="card-container case-study-instructions">
+        <h2>Instructions:</h2>
+        <p>
+          Move the mouse over the eyes to observe the pupil reflexes.
+        </p>
+      </div>
+      <!--Canvas container-->
+      <div class="card-container" id="canvasContainer">
+        <canvas #myCanvas width="600" height="200"></canvas>
+      </div>
+    </div>
   </div>
 </div>
