--- a/frontend/src/app/components/pages/user-profile-page/user-profile-page.component.html
+++ b/frontend/src/app/components/pages/user-profile-page/user-profile-page.component.html
@@ -1,12 +1,13 @@
 <div class="container">
   <div class="row justify-content-center">
-    <div class="col-lg-8">
+    <div class="col-lg-8 col-md-8 col-sm-10 col-12">
       <div class="card mt-4">
+        <h3 class="card-title">Profile Picture</h3>
         <app-avatar></app-avatar>
       </div>
 
       <div class="card mt-4">
-        <div class="card-body d-flex justify-content-between align-items-center">
+        <div class="card-body justify-content-between align-items-center">
           <div>
             <h3 class="card-title">Name</h3>
             <p class="card-text">{{currentUser.name}}</p>
@@ -16,7 +17,7 @@
       </div>
 
       <div class="card mt-4">
-        <div class="card-body d-flex justify-content-between align-items-center">
+        <div class="card-body justify-content-between align-items-center">
           <div>
             <h3 class="card-title">Email</h3>
             <p class="card-text">{{currentUser.email}}</p>
@@ -25,7 +26,7 @@
       </div>
 
       <div class="card mt-4">
-        <div class="card-body d-flex justify-content-between align-items-center">
+        <div class="card-body justify-content-between align-items-center">
           <div>
             <h3 class="card-title">Address</h3>
             <p class="card-text">{{currentUser.address}}</p>
