--- a/frontend/src/app/components/pages/visual-fields-test-left/visual-fields-test-left.component.css
+++ b/frontend/src/app/components/pages/visual-fields-test-left/visual-fields-test-left.component.css
@@ -12,6 +12,11 @@
   text-align: center;
 }
 
+/* Styles for the navbar to make it span the full width */
+.navbar {
+  height: 100%;
+}
+
 .button {
   position: absolute;
   background-color: #4CAF50; /* Green */
@@ -74,21 +79,24 @@
   max-width: 600px;
   min-height: 600px;
   min-width: 500px;
-  margin-right: ;
+  margin-right: 2px;
 }
 
+/* Style for the image to make it fit within its container */
 #Hand {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
+  object-fit: contain;  /* Added this property */
   pointer-events: none;
 }
-
 #myCanvas {
-  width: 100%;
-  height: 100%;
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
+  
   
 }
 
@@ -102,6 +110,7 @@
   vertical-align: middle;
 }
 
+/* Style to limit the width of the Switch Eye button */
 .default-button {
   background-color: #9c88ff;
   border: none;
@@ -113,6 +122,8 @@
   font-size: 16px;
   transition-duration: 0.4s;
   cursor: pointer;
+  max-width: 600px;  /* Added this property */
+  margin: auto;  /* Added this property */
 }
 
 .default-button:hover {
