--- a/frontend/src/app/components/pages/visual-fields-test-left/visual-fields-test-left.component.html
+++ b/frontend/src/app/components/pages/visual-fields-test-left/visual-fields-test-left.component.html
@@ -1,15 +1,12 @@
 <div class="full-container">
   <div class="parent-container">
     <!--navbar partial-->
-    <div
-    class="d-flex align-items-center justify-content-left text-center"
-    style="height: 20vh"
-  >
-    <app-navbar></app-navbar>
-  </div>
+    <div class="d-flex justify-content-left text-center">
+      <app-navbar></app-navbar>
+    </div>
     <!--Visual fields test-->
     <div class="card-container eye-movements-container">
-      <h1 class="card-container  title">Pupil Reflexes Test</h1>
+      <h1 class="card-container title">Visual Fields Test</h1>
       <!--Instructions-->
       <div class="card-container case-study-instructions">
         <h2>Instructions:</h2>
@@ -17,14 +14,14 @@
           Click the corner buttons to detect visual field defects. Switch eyes
           using the button below.
         </p>
-        <!--Canvas container-->
       </div>
+      <!--Canvas container-->
       <div class="card-container" id="canvasContainer">
         <canvas #myCanvas width="600" height="700"></canvas>
         <div class="rectangle hoverable" id="topLeft"></div>
-<div class="rectangle hoverable" id="topRight"></div>
-<div class="rectangle hoverable" id="bottomLeft"></div>
-<div class="rectangle hoverable" id="bottomRight"></div>
+        <div class="rectangle hoverable" id="topRight"></div>
+        <div class="rectangle hoverable" id="bottomLeft"></div>
+        <div class="rectangle hoverable" id="bottomRight"></div>
 
         <button
           class="button"
@@ -57,12 +54,8 @@
       </div>
     </div>
   </div>
-
   <!--Message from patient-->
-  <div
-    class="d-flex align-items-center justify-content-center text-center"
-    style="height: 20vh"
-  >
+  <div class="d-flex align-items-center justify-content-center text-center">
     <div class="card-container d-flex align-items-center">
       <svg
         xmlns="http://www.w3.org/2000/svg"
@@ -79,14 +72,14 @@
       <h2>{{ buttonMessage }}</h2>
       <!--Display button message-->
     </div>
-  </div>
-  <div class="card-container">
-    <default-button
-    [type]="'button'"
-    [text]="'Switch to ' + otherEye + ' Eye'"
-    [bgColor]="'#9c88ff'"
-    (onClick)="handleClick()"
-    ></default-button>
+    <div class="card-container">
+      <default-button
+        [type]="'button'"
+        [text]="'Switch to ' + otherEye + ' Eye'"
+        [bgColor]="'#9c88ff'"
+        (onClick)="handleClick()"
+      ></default-button>
+    </div>
   </div>
 
 </div>
