--- a/frontend/src/app/components/partials/avatar/avatar.component.css
+++ b/frontend/src/app/components/partials/avatar/avatar.component.css
@@ -1,59 +1,46 @@
+/* Avatar styles */
 .avatar-container {
   position: relative;
-  width: fit-content;
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 .image-container {
   height: 200px;
   width: 200px;
+  max-width: 100%; /* Added this to make sure the image container fits within its parent */
   z-index: 1;
   border-radius: 50%;
   background-color: #fff;
   background-position: center;
   background-size: cover;
   box-shadow: 0 10px 20px 20px #6c93001a;
+  margin: auto;
 }
 
-/* .avatar-placeholder {
-  background-image: url('src/assets/Avatar/Avatar-empty.png'); /* make sure the path is correct */
-/* } */
-
-.icon-wrapper {
-  position: absolute;
-  height: 40px;
-  width: 40px;
-  padding: .35rem;
-  background-color:#2962FF;
-  border-radius: 50%;
+/* Card styles */
+.card {
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  right: 0;
-  top: 75%;
-  z-index: 2;
-  cursor: pointer;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  background-color: rgb(238, 234, 234);
+  color: #9c88ff;
+  margin-right: 50px;
+  padding: 40px;
+  width: 100%;
 }
 
-.icon-wrapper:hover {
-  transition: all .25s;
-  background-color: #2147ca; /* Darken #2962FF about 15% */
-}
-
-.icon-wrapper .icon {
-  color: white;
-}
-
-.icon-wrapper label {
-  cursor: pointer;
+.card-body {
   display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
+  width: 100%;
 }
-
-.icon-wrapper input[type='file'] {
-  display: none;
-}
-
-.box-shadow-avatar {
-  box-shadow: 0 10px 20px 20px yellow;
+.btn-primary {
+  background-color: #9c88ff;
+  border-color: #9c88ff;
 }
