--- a/frontend/src/app/components/partials/header/header.component.css
+++ b/frontend/src/app/components/partials/header/header.component.css
@@ -76,3 +76,18 @@ a span {
   width: 100%;
   min-width: 8rem;
 }
+
+.user-info {
+  display: flex;
+  align-items: center; /* This will align the items vertically in the middle */
+}
+
+.user-info a {
+  margin-right: 10px; /* This will add a little space between the username and the picture */
+}
+
+.user-info img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%; /* This will make the image round */
+}
