--- a/frontend/src/app/components/pages/userscore-score-over-time/userscore-score-over-time.component.html
+++ b/frontend/src/app/components/pages/userscore-score-over-time/userscore-score-over-time.component.html
@@ -1,31 +1,70 @@
-<!--frontend/src/app/components/pages/scores/scores.component.html-->
 <div class="full-container">
   <div class="parent-container">
-    <app-navbar-userscore></app-navbar-userscore>
+    <!--navbar partial-->
+    <div class="d-flex justify-content-left text-center">
+      <app-navbar-userscore></app-navbar-userscore>
+    </div>
+    <!-- Scores Section -->
+    <div class="card-container scores-container">
+      <h1 class="card-container title">Scores Overview</h1>
+      <!-- Dropdown for selecting number of tests -->
+      <div class="card-container scores-instructions">
+        <h2>Select Test Ranges:</h2>
+        <table>
+          <thead>
+            <tr>
+              <th>Case Study</th>
+              <th>Start Test Number</th>
+              <th>End Test Number</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let caseStudy of caseStudies">
+              <td>{{ caseStudy.caseStudyNumber }} - {{ caseStudy.name }}</td>
+              <td>
+                <select [(ngModel)]="selectedTestCounts[caseStudy._id].start" (change)="selectedTestCounts[caseStudy._id].start = +selectedTestCounts[caseStudy._id].start; updateView()">
+                  <option *ngFor="let num of availableTestCounts" [value]="num">{{ num }}</option>
+              </select>
+              </td>
+              <td>
+                <select [(ngModel)]="selectedTestCounts[caseStudy._id].end" (change)="selectedTestCounts[caseStudy._id].end = +selectedTestCounts[caseStudy._id].end; updateView()">
+                  <option *ngFor="let num of availableTestCounts" [value]="num">{{ num }}</option>
+              </select>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
 
-    <div>
+     <!-- Canvas for the graph -->
+     <div class="card-container graph-container">
       <canvas #myChart></canvas>
     </div>
-    
-    <div>
-      <table>
-        <thead>
-          <tr>
-            <th>Test Number</th>
-            <th>Date</th>
-            <th>Score</th>
-            <!-- Add additional columns as needed -->
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let score of userScores; let i = index">
-            <td>{{i + 1}}</td>
-            <td>{{score.testTakenAt | date}}</td>
-            <td>{{score.score}}</td>
-            <!-- Add additional data cells as needed -->
-          </tr>
-        </tbody>
-      </table>
+
+      <!-- Dynamic data populated for each case study -->
+      <div *ngFor="let caseStudy of caseStudies" class="card-container scores-tables">
+        <h2>{{ caseStudy.caseStudyNumber }} - {{ caseStudy.name }}</h2>
+        <table>
+          <thead>
+            <tr>
+              <th>Case Study Name</th>
+              <th>Case Study Number</th>
+              <th>Test Date</th>
+              <th>Score</th>
+              <th>% Correct</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let score of getScoresForCaseStudy(caseStudy._id)">
+              <td>{{ getCaseStudyName(score.caseStudyId) }}</td>
+              <td>{{ getCaseStudyNumber(score.caseStudyId) }}</td>
+              <td>{{score.testTakenAt | date}}</td>
+              <td>{{score.score}}</td>
+              <td>{{ getPercentageCorrect(score) }}%</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
   </div>
 </div>
