changes to CSS for register

--- a/frontend/src/app/components/pages/register-page/register-page.component.html
+++ b/frontend/src/app/components/pages/register-page/register-page.component.html
@@ -54,7 +54,7 @@
       >
 
       <!--Register button-->
-      <default-button text="Register"></default-button>
+      <default-button text="Register" bgColor="#9c88ff"></default-button>
 
         <!--Abilty to login if already a user-->
       <div class="login">
