--- a/frontend/src/app/components/pages/case-study-detail/case-study-detail.component.css
+++ b/frontend/src/app/components/pages/case-study-detail/case-study-detail.component.css
@@ -1,30 +1,29 @@
-/* Parent Container allows for a row layout */
 .parent-container {
   display: flex;
-  padding: 2em;
-  background-color: white;
 }
 
-/* Navbar Styles */
 .app-navbar {
-  width: 25%; /* Adjust width according to your needs */
+  width: 25%;
 }
 
-/* Right Container allows for a column layout */
 .right-container {
-  margin-left: 10%;
-  align-items: center; /* Center align items horizontally */
-  justify-content: center; /* Center align items vertically */
   display: flex;
   flex-direction: column;
-  width: 75%; /* Adjust width according to your needs */
+  width: 75%;
 }
 
-.case-study-details {
-  max-width: 800px;
+.card-container {
+  background-color: rgb(238, 234, 234);
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.4);
   border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  margin: 20px;
+  padding: 20px;
   color: #9c88ff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 70%;
 }
 
 .case-study-image {
@@ -33,24 +32,23 @@
   height: auto;
 }
 
-.card {
-  background-color: rgb(238, 234, 234);
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.4);
-  border-radius: 10px;
-  margin: 20px;
-  padding: 20px;
-  color: #9c88ff;
+.title {
+  margin: 0;
 }
 
 .name {
   font-size: 1.5em;
 }
 
+.text-center {
+  text-align: center;
+}
+
 @media screen and (max-width: 600px) {
   .parent-container {
     flex-direction: column;
   }
-  
+
   .app-navbar {
     flex-direction: row;
     flex-wrap: wrap;
