--- a/frontend/src/app/components/pages/direct-ophthalmoscopy-test/direct-ophthalmoscopy-test.component.html
+++ b/frontend/src/app/components/pages/direct-ophthalmoscopy-test/direct-ophthalmoscopy-test.component.html
@@ -1,6 +1,10 @@
+<div class="full-container">
 <div class="parent-container">
   <!--navbar partial-->
+  <div class="d-flex justify-content-left text-center">
   <app-navbar></app-navbar>
+</div>
+
   <!--Right Container-->
   <div class="card-container right-container">
     <!--Title-->
@@ -53,3 +57,5 @@
     </div>
   </div>
 </div>
+</div>
+
