--- a/frontend/src/app/components/pages/visual-fields-test-left/visual-fields-test-left.component.css
+++ b/frontend/src/app/components/pages/visual-fields-test-left/visual-fields-test-left.component.css
@@ -1,16 +1,20 @@
-/* General styles */
-.container {
+
+.full-container {
   display: flex;
-  padding: 20px;
+  justify-content: space-between;
+  align-items: center;
+  height: 90%;
+  margin-top: 20px;
 }
 
-.full-height {
-  height: 100vh;
+.parent-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 90%;
+  margin-top: 20px;
 }
 
-.center-text {
-  text-align: center;
-}
 
 /* Styles for the navbar to make it span the full width */
 .navbar {
@@ -61,13 +65,6 @@
   height: 10%;
 }
 
-@media (max-height: 600px) {
-  .button-bottom-right,
-  .button-bottom-left {
-    top: 60%;
-  }
-}
-
 #canvasContainer {
   position: relative;
   display: flex;
@@ -79,7 +76,6 @@
   max-width: 600px;
   min-height: 600px;
   min-width: 500px;
-  margin-right: 2px;
 }
 
 /* Style for the image to make it fit within its container */
@@ -144,11 +140,7 @@
   justify-content: center;
 }
 
-.parent-container {
-  display: flex;
-  flex-direction: row;
-  height: 100vh;
-}
+
 /* Button styles */
 #topLeftButton {
   position: absolute;
