--- a/frontend/src/app/components/pages/visual-fields-test-right/visual-fields-test-right.component.html
+++ b/frontend/src/app/components/pages/visual-fields-test-right/visual-fields-test-right.component.html
@@ -1,15 +1,12 @@
 <div class="full-container">
   <div class="parent-container">
     <!--navbar partial-->
-    <div
-      class="d-flex align-items-center justify-content-left text-center"
-      style="height: 20vh"
-    >
+    <div class="d-flex justify-content-left text-center">
       <app-navbar></app-navbar>
     </div>
     <!--Visual fields test-->
     <div class="card-container eye-movements-container">
-      <h1 class="card-container title">Pupil Reflexes Test</h1>
+      <h1 class="card-container title">Visual Fields Test</h1>
       <!--Instructions-->
       <div class="card-container case-study-instructions">
         <h2>Instructions:</h2>
@@ -17,8 +14,8 @@
           Click the corner buttons to detect visual field defects. Switch eyes
           using the button below.
         </p>
-        <!--Canvas container-->
       </div>
+      <!--Canvas container-->
       <div class="card-container" id="canvasContainer">
         <canvas #myCanvas width="600" height="700"></canvas>
         <div class="rectangle hoverable" id="topLeft"></div>
@@ -55,37 +52,33 @@
           Bottom Right Button
         </button>
       </div>
+      <!--Message from patient-->
+      <div class="d-flex align-items-center justify-content-center text-center">
+        <div class="card-container d-flex align-items-center">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="30"
+            height="30"
+            fill="currentColor"
+            class="bi bi-chat mr-3"
+            viewBox="0 0 16 16"
+          >
+            <path
+              d="M2.678 11.894a1 1 0 0 1 .287.801 10.97 10.97 0 0 1-.398 2c1.395-.323 2.247-.697 2.634-.893a1 1 0 0 1 .71-.074A8.06 8.06 0 0 0 8 14c3.996 0 7-2.807 7-6 0-3.192-3.004-6-7-6S1 4.808 1 8c0 1.468.617 2.83 1.678 3.894zm-.493 3.905a21.682 21.682 0 0 1-.713.129c-.2.032-.352-.176-.273-.362a9.68 9.68 0 0 0 .244-.637l.003-.01c.248-.72.45-1.548.524-2.319C.743 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.52.263-1.639.742-3.468 1.105z"
+            />
+          </svg>
+          <h2>{{ buttonMessage }}</h2>
+          <!--Display button message-->
+        </div>
+      </div>
+      <div class="card-container d-flex align-items-center">
+        <default-button
+          [type]="'button'"
+          [text]="'Switch to ' + otherEye + ' Eye'"
+          [bgColor]="'#9c88ff'"
+          (onClick)="handleClick()"
+        ></default-button>
+      </div>
     </div>
-  </div>
-
-  <!--Message from patient-->
-  <div
-    class="d-flex align-items-center justify-content-center text-center"
-    style="height: 20vh"
-  >
-    <div class="card-container d-flex align-items-center">
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        width="30"
-        height="30"
-        fill="currentColor"
-        class="bi bi-chat mr-3"
-        viewBox="0 0 16 16"
-      >
-        <path
-          d="M2.678 11.894a1 1 0 0 1 .287.801 10.97 10.97 0 0 1-.398 2c1.395-.323 2.247-.697 2.634-.893a1 1 0 0 1 .71-.074A8.06 8.06 0 0 0 8 14c3.996 0 7-2.807 7-6 0-3.192-3.004-6-7-6S1 4.808 1 8c0 1.468.617 2.83 1.678 3.894zm-.493 3.905a21.682 21.682 0 0 1-.713.129c-.2.032-.352-.176-.273-.362a9.68 9.68 0 0 0 .244-.637l.003-.01c.248-.72.45-1.548.524-2.319C.743 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.52.263-1.639.742-3.468 1.105z"
-        />
-      </svg>
-      <h2>{{ buttonMessage }}</h2>
-      <!--Display button message-->
-    </div>
-  </div>
-  <div class="card-container">
-    <default-button
-      [type]="'button'"
-      [text]="'Switch to ' + otherEye + ' Eye'"
-      [bgColor]="'#9c88ff'"
-      (onClick)="handleClick()"
-    ></default-button>
   </div>
 </div>
